--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.huazhu.bluetoothchat.ConnectActivity">
+    tools:context=".DeviceActivity">
     <TextView
         android:id="@+id/paired_title"
         android:layout_width="wrap_content"
